[package]
name = "oca-presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oca_presentation"
path = "src/lib.rs"

[dependencies]
isolang = { version = "2.3.0", features = ["serde"] }
said = { version = "0.3.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
