[package]
name = "oca-presentation"
version = "0.2.0"
edition = "2021"
description = "Lib providing struct for OCA presentation"
authors = ["Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>", "Robert Mitwicki <robert.mitwicki@humancolossus.org>"]
license = "EUPL-1.2"
readme = "README.md"
repository = "https://github.com/THCLab/oca-presentation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oca_presentation"
path = "src/lib.rs"

[dependencies]
isolang = { version = "2.3.0", features = ["serde"] }
said = { version = "0.3.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
